# arm-isa-a32

./: Cargo.toml  README.md
src/: lib.rs
src/instructions/: arithmetic.rs  misc.rs  mod.rs
